<resources>
    <string name="app_name">NotepadMVC</string>
    <string name="save">Save</string>
    <string name="_new">new</string>
    <string name="todo">TODO</string>
    <string name="open">Open</string>
    <string name="save_as">Save as</string>
    <string name="search_in">Find</string>
    <string name="recent">Recent</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="how_to_use">How to use?</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="file">File</string>
    <string name="edit">Edit</string>
    <string name="other">Other</string>
    <string name="about_app">About app</string>
    <string name="findName">Find what</string>
    <string name="print">Print</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="exit">Exit</string>
    <array name="size">
        <item>size</item>
        <item>"18"</item>
        <item>"25"</item>
        <item>"30"</item>
        <item>"35"</item>
    </array>
    <string name="content_description_search">Find</string>
    <string name="dateT">Date/Time</string>
</resources>