<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subMenu1"
            android:title="@string/file">
            <menu>
                <item
                    android:id="@+id/newFile"
                    android:checkable="true"
                    android:icon="@drawable/ic_new_file"
                    android:title="@string/_new" />
                <item
                    android:id="@+id/openFile"
                    android:checkable="true"
                    android:icon="@drawable/ic_open_file"
                    android:title="@string/open" />

                <item
                    android:id="@+id/save"
                    android:checkable="true"
                    android:icon="@drawable/ic_save_file"
                    android:title="@string/save" />

                <item
                    android:id="@+id/saveAs"
                    android:checkable="true"
                    android:icon="@drawable/ic_save_as_file"
                    android:title="@string/save_as" />

                <item
                    android:id="@+id/printDocument"
                    android:checkable="true"
                    android:icon="@drawable/ic_baseline_print"
                    android:title="@string/print"/>

            </menu>
        </item>

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subMenu2"
            android:title="@string/edit">
            <menu>

                <item
                    android:id="@+id/undo"
                    android:checkable="true"
                    android:icon="@drawable/ic_undo"
                    android:title="@string/undo" />
                <item
                    android:id="@+id/redo"
                    android:checkable="true"
                    android:icon="@drawable/ic_redo"
                    android:title="@string/redo" />

                <item
                    android:id="@+id/cut"
                    android:checkable="true"
                    android:icon="@drawable/ic_cut"
                    android:title="@string/cut" />

                <item
                    android:id="@+id/copy"
                    android:checkable="true"
                    android:icon="@drawable/ic_copy"
                    android:title="@string/copy" />

                <item
                    android:id="@+id/paste"
                    android:checkable="true"
                    android:icon="@drawable/ic_paste"
                    android:title="@string/paste" />

                <item
                    android:id="@+id/delete"
                    android:checkable="true"
                    android:icon="@drawable/ic_delete"
                    android:title="@string/delete" />

                <item
                    android:id="@+id/select_all"
                    android:checkable="true"
                    android:icon="@drawable/ic_select_all"
                    android:title="@string/select_all" />

                <item
                    android:id="@+id/searchText"
                    android:checkable="true"
                    android:icon="@drawable/ic_search_in"
                    android:title="@string/search_in" />

                <item
                    android:id="@+id/dateAndTime"
                    android:checkable="true"
                    android:icon="@drawable/ic_search_in"
                    android:title="@string/dateT" />

            </menu>
        </item>

    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subMenu3"
            android:title="@string/other">
            <menu>

                <item
                    android:id="@+id/about_app"
                    android:icon="@drawable/ic_baseline_logo_dev_24"
                    android:checkable="true"
                    android:title="@string/about_app" />

                <item
                    android:id="@+id/exit"
                    android:icon="@drawable/ic_exit_to_app"
                    android:checkable="true"
                    android:title="@string/exit"/>

            </menu>
        </item>

    </group>

</menu>